# batch_whisper_extension

./: README.md  __init__.py  pyproject.toml
.github/workflows/: publish.yml
