[project]
name = "batch_whisper_extension"
description = "A lightweight ComfyUI extension node that runs OpenAI Whisper to transcribe up to 3 audio inputs, merges and sorts timestamped segments, and outputs a single timestamped transcript string with speaker labels."
version = "1.0.1"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]


[project.urls]
Repository = "https://github.com/Markus-Pasanen/batch_whisper_extension"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/Markus-Pasanen/batch_whisper_extension/wiki"
"Bug Tracker" = "https://github.com/Markus-Pasanen/batch_whisper_extension/issues"

[tool.comfy]
PublisherId = "jayzqa"
DisplayName = "Batch whisper extension"
Icon = "https://raw.githubusercontent.com/Markus-Pasanen/batch_whisper_extension/main/icon.png"
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility